corpus/cpp/access_control/case-01/snapshots/gcc15/dual_sink_structured/render.concise.txt
error: [unavailable_api] 'int Counter::value' is private within this context @ src/main.cpp:8:20
name: int Counter::value
use : return counter.value;
from: src/main.cpp:3:9 int value = 1;
| src/main.cpp:8:20
|     return counter.value;
|                    ^
details: --formed-explain | raw: --formed-raw